src/test/deca/context/valid/op_un_minus_int.deca
// Description :
// test du moins unaire sur un entier
//
// Résultats :
// ok

{
  int x;
  float y;
  x = -5;
  y = -3;
}
